# agents

./: README.md
pihole-threat-intel/: Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml
pihole-threat-intel/fluentbit/: fluent-bit.conf  parsers.conf
pihole-threat-intel/src/pihole_threat_intel/: agent.py  config.py  datasource.py  domain_aggregator.py  enrichment.py  known_domains.py  logging_config.py  main.py  models.py  opensearch_client.py  opensearch_source.py  output.py  sqlite_source.py  yaml_config.py
pihole-threat-intel/src/pihole_threat_intel/templates/: report.html
